@@ -130,7 +130,12 @@ task contract(type: Test, description: 'Runs the pact contract tests.', group: '
   useJUnitPlatform()
   testClassesDirs = sourceSets.contractTest.output.classesDirs
   classpath = sourceSets.contractTest.runtimeClasspath
+}
 
+task fortifyScan(type: JavaExec, description: 'Run fortify scan.')  {
+  mainClass = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 checkstyle {
@@ -370,6 +375,9 @@ dependencies {
   implementation group: 'org.springframework.security', name: 'spring-security-oauth2-resource-server'
   implementation group: 'org.springframework.security', name: 'spring-security-oauth2-jose'
 
+  implementation group: 'org.springframework', name: 'spring-aspects', version: '6.0.11'
+  implementation group: 'org.springframework.retry', name: 'spring-retry', version: '2.0.2'
+
   implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: '6.0.1'
 
   // CVE-2019-17195
@@ -426,6 +434,7 @@ dependencies {
   testImplementation(group: 'org.springframework.boot', name: 'spring-boot-starter-test') {
     exclude group: "com.vaadin.external.google", module: "android-json"
   }
+
   testImplementation group: 'org.apiguardian', name: 'apiguardian-api', version: '1.1.2'
   testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.12.4'
   testImplementation group: 'io.rest-assured', name: 'rest-assured-all', version: versions.restAssured
@@ -436,6 +445,10 @@ dependencies {
   testImplementation group: 'net.serenity-bdd', name: 'serenity-spring', version: versions.serenity
 
 
+  testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.3.0', classifier: 'all', {
+    exclude group: 'commons-io', module: 'commons-io'
+    exclude group: 'org.apache.commons', module: 'commons-lang3'
+  }
 
   testImplementation group: 'org.pitest', name: 'pitest', version: versions.pitest
   testImplementation "info.solidsoft.gradle.pitest:gradle-pitest-plugin:${versions.gradlePitest}"
